[package]
name = "latency"
version = "0.1.0"
edition = "2021"
description = "Ultra-low-latency timing library with nanosecond precision for performance-critical applications"
license = "MIT"
repository = "https://github.com/1000xsh/latency"
homepage = "https://1000x.sh"
keywords = ["timing", "latency", "rdtsc", "performance", "trading"]
categories = ["development-tools::profiling"]

[dependencies]

[dev-dependencies]
# for testing
criterion = "0.8"

[features]
default = ["enabled"]
enabled = []

# [[bench]]
# name = "rdtsc"
# harness = false
