[package]
name = "latency"
version = "0.2.0"
edition = "2021"
description = "low-latency timing library"
license = "MIT"
repository = "https://github.com/1000xsh/latency"
homepage = "https://1000x.sh"
keywords = ["timing", "latency", "rdtsc", "performance", "trading"]
categories = ["development-tools::profiling"]

[dependencies]

[dev-dependencies]
# for testing
solana-measure = "3.1.13"

[features]
default = ["enabled"]
enabled = []

# [[bench]]
# name = "rdtsc"
# harness = false
